crates/ir/tests/ir/snapshots/main__ir__lower__traits__println_show_derived.snap
---
source: crates/ir/tests/ir/lower.rs
expression: ir_module.to_string()
---
module traits__println_show_derived

type MyOption[x10] = MySome#0(x10) | MyNone#1
instance core/show.Show[MyOption] { show=Show$$MyOption$$show }
import core/option/Some as Some(b) -> Option[b]
import core/result/Ok as Ok(d) -> Result[c, d]
import core/result/Err as Err(c) -> Result[c, d]
import core/list/Cons as Cons(e, List[e]) -> List[e]
import core/peek/peek as peek(d) -> d
import core/list/last as last(List[e3]) -> Option[e3]
import core/list/sort_by as sort_by(List[j5], (j5) -> y4) -> List[j5]
import core/list/filter as filter(List[h1], (h1) -> Bool) -> List[h1]
import core/vec/to_list as to_list(Vec[w10]) -> List[w10]
import core/traversable/sequence as sequence(o[p[r]]) -> p[o[r]]
import core/io/println as println(g) -> Unit
declare println: (g) -> Unit

fn main() -> Unit =
  let v2: MyOption[Int] = construct MyOption::MySome#0(1)
  let v0: Dict[core/show.Show, Int] = get_dict core/show.Show[Int]
  let v1: Dict[core/show.Show, MyOption[Int]] = make_dict core/show.Show[MyOption[Int]](v0)
  let v3: Unit = call println(v1, v2)
  v3

fn Show$$MyOption$$show(v4: Dict[core/show.Show, x10], v5: MyOption[x10]) -> String =
  switch v5 {
    0 (v6: x10) ->
      let v7: String = trait_call core/show.Show.show(v4, v6)
      let v8: String = concat_string("MySome(", v7)
      let v9: String = concat_string(v8, ")")
      v9
    1 ->
      "MyNone"
  }
