crates/ir/tests/ir/snapshots/main__ir__lower__traits__superclass_chain.snap
---
source: crates/ir/tests/ir/lower.rs
expression: ir_module.to_string()
---
module traits__superclass_chain

struct Num { n: Int }
instance core/eq.Eq[Num] { eq=Eq$$Num$$eq }
instance core/ord.Ord[Num] { lt=Ord$$Num$$lt }
import core/peek/peek as peek(e) -> e
import core/list/last as last(List[q3]) -> Option[q3]
import core/list/sort_by as sort_by(List[v5], (v5) -> k5) -> List[v5]
import core/list/filter as filter(List[g1], (g1) -> Bool) -> List[g1]
import core/list/fold as fold(List[t1], v1, (v1, t1) -> v1) -> v1
import core/list/map as map(List[v], (v) -> x) -> List[x]
import core/vec/to_list as to_list(Vec[y7]) -> List[y7]
import core/io/println as println(h) -> Unit
import core/option/Some as Some(c) -> Option[c]
import core/result/Ok as Ok(e) -> Result[d, e]
import core/result/Err as Err(d) -> Result[d, e]
import core/list/Cons as Cons(f, List[f]) -> List[f]
declare println: (h) -> Unit

fn is_less(v0: Dict[core/ord.Ord, k8], v1: k8, v2: k8) -> Bool =
  let v3: Bool = trait_call core/ord.Ord.lt(v0, v1, v2)
  v3

fn main() -> Unit =
  let v5: Num = construct Num(1)
  let v6: Num = construct Num(2)
  let v7: Dict[core/ord.Ord, Num] = get_dict core/ord.Ord[Num]
  let v8: Bool = call is_less(v7, v5, v6)
  let v4: Dict[core/show.Show, Bool] = get_dict core/show.Show[Bool]
  let v9: Unit = call println(v4, v8)
  v9

fn Eq$$Num$$eq(v10: Num, v11: Num) -> Bool =
  let v12: Dict[core/eq.Eq, Int] = get_dict core/eq.Eq[Int]
  let v13: Int = project v10.0
  let v14: Int = project v11.0
  let v15: Bool = trait_call core/eq.Eq.eq(v12, v13, v14)
  v15

fn Ord$$Num$$lt(v16: Num, v17: Num) -> Bool =
  let v18: Dict[core/ord.Ord, Int] = get_dict core/ord.Ord[Int]
  let v19: Int = project v16.0
  let v20: Int = project v17.0
  let v21: Bool = trait_call core/ord.Ord.lt(v18, v19, v20)
  v21
