crates/ir/tests/ir/snapshots/main__ir__lower__traits__superclass_projection_monad_applicative.snap
---
source: crates/ir/tests/ir/lower.rs
expression: ir_module.to_string()
---
module traits__superclass_projection_monad_applicative

import core/peek/peek as peek(d) -> d
import core/list/last as last(List[e3]) -> Option[e3]
import core/list/sort_by as sort_by(List[j5], (j5) -> y4) -> List[j5]
import core/list/filter as filter(List[h1], (h1) -> Bool) -> List[h1]
import core/vec/to_list as to_list(Vec[w10]) -> List[w10]
import core/io/println as println(g) -> Unit
import core/option/Some as Some(b) -> Option[b]
import core/result/Ok as Ok(d) -> Result[c, d]
import core/result/Err as Err(c) -> Result[c, d]
import core/list/Cons as Cons(e, List[e]) -> List[e]
declare println: (g) -> Unit

fn double_mapped(v0: Dict[core/monad.Monad, x11], v1: x11[z11], v2: (z11) -> z11) -> x11[z11] =
  let v12: (z11) -> x11[z11] = make_closure(lambda$29, [v2, v0])
  let v13: x11[z11] = trait_call core/monad.Monad.flat_map(v0, v1, v12)
  v13

fn main() -> Unit =
  let_join v42(v29: Unit) =
    let v31: Option[Int] = construct Option::None#1()
    let v30: Option[Int] = v31
    let v34: (Int) -> Int = make_closure(lambda$31, [])
    let v35: Dict[core/monad.Monad, Option] = get_dict core/monad.Monad[Option]
    let v36: Option[Int] = call double_mapped(v35, v30, v34)
    switch v36 {
      0 (v37: f) ->
        let v38: Dict[core/show.Show, String] = get_dict core/show.Show[String]
        let v39: Unit = call println(v38, "unexpected")
        v39
      1 ->
        let v40: Dict[core/show.Show, String] = get_dict core/show.Show[String]
        let v41: Unit = call println(v40, "None")
        v41
    }
  in
  let v14: Option[Int] = construct Option::Some#0(8)
  let v17: (Int) -> Int = make_closure(lambda$30, [])
  let v18: Dict[core/monad.Monad, Option] = get_dict core/monad.Monad[Option]
  let v19: Option[Int] = call double_mapped(v18, v14, v17)
  switch v19 {
    0 (v20: Int) ->
      let v22: Dict[core/show.Show, Int] = get_dict core/show.Show[Int]
      let v23: String = trait_call core/show.Show.show(v22, v20)
      let v24: Dict[core/semigroup.Semigroup, String] = get_dict core/semigroup.Semigroup[String]
      let v25: String = trait_call core/semigroup.Semigroup.combine(v24, "Some:", v23)
      let v21: Dict[core/show.Show, String] = get_dict core/show.Show[String]
      let v26: Unit = call println(v21, v25)
      jump v42(v26)
    1 ->
      let v27: Dict[core/show.Show, String] = get_dict core/show.Show[String]
      let v28: Unit = call println(v27, "None")
      jump v42(v28)
  }

fn lambda$29(v3: (z11) -> z11, v4: Dict[core/monad.Monad, x11], v5: z11) -> x11[z11] =
  let v8: z11 = call_closure v3(v5)
  let v9: Dict[core/applicative.Applicative, x11] = project_dict_field v4.dict0 : core/applicative.Applicative[x11]
  let v10: x11[z11] = trait_call core/applicative.Applicative.pure(v9, v8)
  let v6: Dict[core/applicative.Applicative, x11] = project_dict_field v4.dict0 : core/applicative.Applicative[x11]
  let v7: Dict[core/functor.Functor, x11] = project_dict_field v6.dict0 : core/functor.Functor[x11]
  let v11: x11[z11] = trait_call core/functor.Functor.map(v7, v10, v3)
  v11

fn lambda$30(v15: Int) -> Int =
  let v16: Int = add_int(v15, 1)
  v16

fn lambda$31(v32: Int) -> Int =
  let v33: Int = add_int(v32, 1)
  v33
