crates/ir/tests/ir/snapshots/main__ir__lower__traits__trait_basic.snap
---
source: crates/ir/tests/ir/lower.rs
expression: ir_module.to_string()
---
module traits__trait_basic

struct Point { x: Int, y: Int }
instance core/eq.Eq[Point] { eq=Eq$$Point$$eq }
import core/peek/peek as peek(e) -> e
import core/list/last as last(List[r3]) -> Option[r3]
import core/list/sort_by as sort_by(List[w5], (w5) -> l5) -> List[w5]
import core/list/filter as filter(List[g1], (g1) -> Bool) -> List[g1]
import core/list/fold as fold(List[t1], v1, (v1, t1) -> v1) -> v1
import core/list/map as map(List[v], (v) -> x) -> List[x]
import core/vec/to_list as to_list(Vec[z7]) -> List[z7]
import core/io/println as println(h) -> Unit
import core/option/Some as Some(c) -> Option[c]
import core/result/Ok as Ok(e) -> Result[d, e]
import core/result/Err as Err(d) -> Result[d, e]
import core/list/Cons as Cons(f, List[f]) -> List[f]

fn main() -> Bool =
  let v1: ~Point = construct Point(1, 2)
  let v2: ~Point = construct Point(1, 2)
  let v0: Dict[core/eq.Eq, Point] = get_dict core/eq.Eq[Point]
  let v3: Bool = trait_call core/eq.Eq.eq(v0, v1, v2)
  v3

fn Eq$$Point$$eq(v4: Point, v5: Point) -> Bool =
  let_join v15(v10: Bool) =
    if v10 {
      let v11: Dict[core/eq.Eq, Int] = get_dict core/eq.Eq[Int]
      let v12: Int = project v4.1
      let v13: Int = project v5.1
      let v14: Bool = trait_call core/eq.Eq.eq(v11, v12, v13)
      v14
    } else {
      false
    }
  in
  let v6: Dict[core/eq.Eq, Int] = get_dict core/eq.Eq[Int]
  let v7: Int = project v4.0
  let v8: Int = project v5.0
  let v9: Bool = trait_call core/eq.Eq.eq(v6, v7, v8)
  jump v15(v9)
